--- a/Kotlin/BOJSteps/BojStep/app/src/main/res/layout/activity_main.xml
+++ b/Kotlin/BOJSteps/BojStep/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textAge" />
+
+    <Button
+        android:id="@+id/nextBtnTwo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="136dp"
+        android:text="넘어가기2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textAge" />
 </androidx.constraintlayout.widget.ConstraintLayout>
